# kde-display-profiles

./: .gitignore  LICENSE  PKGBUILD  kde-display-profiles.desktop  kde_display_profiles.py  package-lock.json  pyproject.toml
